--- a/JS Advanced/JS Advanced May 2020/UnitTesting/app/package.json
+++ b/JS Advanced/JS Advanced May 2020/UnitTesting/app/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "mocha ./src/**/*.spec.js"
+    "test": "mocha \"./src/**/*.spec.js\""
   },
   "devDependencies": {
     "chai": "^4.2.0",
